SP7-92 [UPDATE] remove position fixed for scrollbar

--- a/assets/scss/base/_scaffolding.scss
+++ b/assets/scss/base/_scaffolding.scss
@@ -68,7 +68,6 @@ body.single .site-content {
 
 // scollbar
 ::-webkit-scrollbar {
-  position: fixed;
   width: 8px;
   height: 8px;
 }
